--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^6.0.4",
     "vite": "^7.2.4"
+  },
+  "dependencies": {
+    "vue": "^3.5.28",
+    "vue-router": "^5.0.3"
   }
 }
